ecmascript/parser/tests/test262-error-references/fail/033c083bb1f44642.js.stderr
error: Not an utf-8 character: 55296
 --> $DIR/tests/test262-parser/fail/033c083bb1f44642.js:1:1
  |
1 | \uD800\x62
  | ^^^^^^

